// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scrollSnapMarginBlockStart renders 0 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-margin-block-start: 0;
  -moz-scroll-snap-margin-block-start: 0;
  -ms-scroll-snap-margin-block-start: 0;
  scroll-snap-margin-block-start: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-block-start: 0;
  -moz-scroll-snap-margin-block-start: 0;
  -ms-scroll-snap-margin-block-start: 0;
  scroll-snap-margin-block-start: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-block-start: 0;
  -moz-scroll-snap-margin-block-start: 0;
  -ms-scroll-snap-margin-block-start: 0;
  scroll-snap-margin-block-start: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-block-start: 0;
  -moz-scroll-snap-margin-block-start: 0;
  -ms-scroll-snap-margin-block-start: 0;
  scroll-snap-margin-block-start: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapMarginBlockStart renders function 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-margin-block-start: hasnot;
  -moz-scroll-snap-margin-block-start: hasnot;
  -ms-scroll-snap-margin-block-start: hasnot;
  scroll-snap-margin-block-start: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-block-start: has;
  -moz-scroll-snap-margin-block-start: has;
  -ms-scroll-snap-margin-block-start: has;
  scroll-snap-margin-block-start: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-block-start: hasnot;
  -moz-scroll-snap-margin-block-start: hasnot;
  -ms-scroll-snap-margin-block-start: hasnot;
  scroll-snap-margin-block-start: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-block-start: has;
  -moz-scroll-snap-margin-block-start: has;
  -ms-scroll-snap-margin-block-start: has;
  scroll-snap-margin-block-start: has;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapMarginBlockStart renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-margin-block-start: invalid.path.1;
  -moz-scroll-snap-margin-block-start: invalid.path.1;
  -ms-scroll-snap-margin-block-start: invalid.path.1;
  scroll-snap-margin-block-start: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-block-start: invalid.path.1;
  -moz-scroll-snap-margin-block-start: invalid.path.1;
  -ms-scroll-snap-margin-block-start: invalid.path.1;
  scroll-snap-margin-block-start: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-block-start: invalid.path.1;
  -moz-scroll-snap-margin-block-start: invalid.path.1;
  -ms-scroll-snap-margin-block-start: invalid.path.1;
  scroll-snap-margin-block-start: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-block-start: invalid.path.1;
  -moz-scroll-snap-margin-block-start: invalid.path.1;
  -ms-scroll-snap-margin-block-start: invalid.path.1;
  scroll-snap-margin-block-start: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapMarginBlockStart renders negative number 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-margin-block-start: -54881;
  -moz-scroll-snap-margin-block-start: -54881;
  -ms-scroll-snap-margin-block-start: -54881;
  scroll-snap-margin-block-start: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-block-start: -54881;
  -moz-scroll-snap-margin-block-start: -54881;
  -ms-scroll-snap-margin-block-start: -54881;
  scroll-snap-margin-block-start: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-block-start: -42365;
  -moz-scroll-snap-margin-block-start: -42365;
  -ms-scroll-snap-margin-block-start: -42365;
  scroll-snap-margin-block-start: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-block-start: -42365;
  -moz-scroll-snap-margin-block-start: -42365;
  -ms-scroll-snap-margin-block-start: -42365;
  scroll-snap-margin-block-start: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapMarginBlockStart renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-block-start: July;
    -moz-scroll-snap-margin-block-start: July;
    -ms-scroll-snap-margin-block-start: July;
    scroll-snap-margin-block-start: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-block-start: August;
    -moz-scroll-snap-margin-block-start: August;
    -ms-scroll-snap-margin-block-start: August;
    scroll-snap-margin-block-start: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-block-start: September;
    -moz-scroll-snap-margin-block-start: September;
    -ms-scroll-snap-margin-block-start: September;
    scroll-snap-margin-block-start: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-margin-block-start: November;
    -moz-scroll-snap-margin-block-start: November;
    -ms-scroll-snap-margin-block-start: November;
    scroll-snap-margin-block-start: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-block-start: July;
    -moz-scroll-snap-margin-block-start: July;
    -ms-scroll-snap-margin-block-start: July;
    scroll-snap-margin-block-start: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-block-start: August;
    -moz-scroll-snap-margin-block-start: August;
    -ms-scroll-snap-margin-block-start: August;
    scroll-snap-margin-block-start: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-block-start: September;
    -moz-scroll-snap-margin-block-start: September;
    -ms-scroll-snap-margin-block-start: September;
    scroll-snap-margin-block-start: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-margin-block-start: November;
    -moz-scroll-snap-margin-block-start: November;
    -ms-scroll-snap-margin-block-start: November;
    scroll-snap-margin-block-start: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-block-start: May;
    -moz-scroll-snap-margin-block-start: May;
    -ms-scroll-snap-margin-block-start: May;
    scroll-snap-margin-block-start: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-block-start: June;
    -moz-scroll-snap-margin-block-start: June;
    -ms-scroll-snap-margin-block-start: June;
    scroll-snap-margin-block-start: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-block-start: April;
    -moz-scroll-snap-margin-block-start: April;
    -ms-scroll-snap-margin-block-start: April;
    scroll-snap-margin-block-start: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-margin-block-start: November;
    -moz-scroll-snap-margin-block-start: November;
    -ms-scroll-snap-margin-block-start: November;
    scroll-snap-margin-block-start: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-block-start: May;
    -moz-scroll-snap-margin-block-start: May;
    -ms-scroll-snap-margin-block-start: May;
    scroll-snap-margin-block-start: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-block-start: June;
    -moz-scroll-snap-margin-block-start: June;
    -ms-scroll-snap-margin-block-start: June;
    scroll-snap-margin-block-start: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-block-start: April;
    -moz-scroll-snap-margin-block-start: April;
    -ms-scroll-snap-margin-block-start: April;
    scroll-snap-margin-block-start: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-margin-block-start: November;
    -moz-scroll-snap-margin-block-start: November;
    -ms-scroll-snap-margin-block-start: November;
    scroll-snap-margin-block-start: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapMarginBlockStart renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-scroll-snap-margin-block-start: July;
    -moz-scroll-snap-margin-block-start: July;
    -ms-scroll-snap-margin-block-start: July;
    scroll-snap-margin-block-start: July;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-block-start: August;
    -moz-scroll-snap-margin-block-start: August;
    -ms-scroll-snap-margin-block-start: August;
    scroll-snap-margin-block-start: August;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-margin-block-start: September;
    -moz-scroll-snap-margin-block-start: September;
    -ms-scroll-snap-margin-block-start: September;
    scroll-snap-margin-block-start: September;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-block-start: November;
    -moz-scroll-snap-margin-block-start: November;
    -ms-scroll-snap-margin-block-start: November;
    scroll-snap-margin-block-start: November;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-margin-block-start: August;
    -moz-scroll-snap-margin-block-start: August;
    -ms-scroll-snap-margin-block-start: August;
    scroll-snap-margin-block-start: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-scroll-snap-margin-block-start: July;
    -moz-scroll-snap-margin-block-start: July;
    -ms-scroll-snap-margin-block-start: July;
    scroll-snap-margin-block-start: July;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-block-start: August;
    -moz-scroll-snap-margin-block-start: August;
    -ms-scroll-snap-margin-block-start: August;
    scroll-snap-margin-block-start: August;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-margin-block-start: September;
    -moz-scroll-snap-margin-block-start: September;
    -ms-scroll-snap-margin-block-start: September;
    scroll-snap-margin-block-start: September;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-block-start: November;
    -moz-scroll-snap-margin-block-start: November;
    -ms-scroll-snap-margin-block-start: November;
    scroll-snap-margin-block-start: November;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-margin-block-start: August;
    -moz-scroll-snap-margin-block-start: August;
    -ms-scroll-snap-margin-block-start: August;
    scroll-snap-margin-block-start: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-snap-margin-block-start: January;
    -moz-scroll-snap-margin-block-start: January;
    -ms-scroll-snap-margin-block-start: January;
    scroll-snap-margin-block-start: January;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-block-start: December;
    -moz-scroll-snap-margin-block-start: December;
    -ms-scroll-snap-margin-block-start: December;
    scroll-snap-margin-block-start: December;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-margin-block-start: April;
    -moz-scroll-snap-margin-block-start: April;
    -ms-scroll-snap-margin-block-start: April;
    scroll-snap-margin-block-start: April;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-block-start: May;
    -moz-scroll-snap-margin-block-start: May;
    -ms-scroll-snap-margin-block-start: May;
    scroll-snap-margin-block-start: May;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-margin-block-start: June;
    -moz-scroll-snap-margin-block-start: June;
    -ms-scroll-snap-margin-block-start: June;
    scroll-snap-margin-block-start: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-snap-margin-block-start: January;
    -moz-scroll-snap-margin-block-start: January;
    -ms-scroll-snap-margin-block-start: January;
    scroll-snap-margin-block-start: January;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-block-start: December;
    -moz-scroll-snap-margin-block-start: December;
    -ms-scroll-snap-margin-block-start: December;
    scroll-snap-margin-block-start: December;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-margin-block-start: April;
    -moz-scroll-snap-margin-block-start: April;
    -ms-scroll-snap-margin-block-start: April;
    scroll-snap-margin-block-start: April;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-block-start: May;
    -moz-scroll-snap-margin-block-start: May;
    -ms-scroll-snap-margin-block-start: May;
    scroll-snap-margin-block-start: May;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-margin-block-start: June;
    -moz-scroll-snap-margin-block-start: June;
    -ms-scroll-snap-margin-block-start: June;
    scroll-snap-margin-block-start: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapMarginBlockStart renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-margin-block-start: 54881;
  -moz-scroll-snap-margin-block-start: 54881;
  -ms-scroll-snap-margin-block-start: 54881;
  scroll-snap-margin-block-start: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-block-start: 54881;
  -moz-scroll-snap-margin-block-start: 54881;
  -ms-scroll-snap-margin-block-start: 54881;
  scroll-snap-margin-block-start: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-block-start: 42365;
  -moz-scroll-snap-margin-block-start: 42365;
  -ms-scroll-snap-margin-block-start: 42365;
  scroll-snap-margin-block-start: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-block-start: 42365;
  -moz-scroll-snap-margin-block-start: 42365;
  -ms-scroll-snap-margin-block-start: 42365;
  scroll-snap-margin-block-start: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapMarginBlockStart renders string 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-margin-block-start: July;
  -moz-scroll-snap-margin-block-start: July;
  -ms-scroll-snap-margin-block-start: July;
  scroll-snap-margin-block-start: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-block-start: July;
  -moz-scroll-snap-margin-block-start: July;
  -ms-scroll-snap-margin-block-start: July;
  scroll-snap-margin-block-start: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-block-start: June;
  -moz-scroll-snap-margin-block-start: June;
  -ms-scroll-snap-margin-block-start: June;
  scroll-snap-margin-block-start: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-block-start: June;
  -moz-scroll-snap-margin-block-start: June;
  -ms-scroll-snap-margin-block-start: June;
  scroll-snap-margin-block-start: June;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapMarginBlockStart renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-margin-block-start: DarkSlateBlue;
  -moz-scroll-snap-margin-block-start: DarkSlateBlue;
  -ms-scroll-snap-margin-block-start: DarkSlateBlue;
  scroll-snap-margin-block-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-block-start: DarkSlateBlue;
  -moz-scroll-snap-margin-block-start: DarkSlateBlue;
  -ms-scroll-snap-margin-block-start: DarkSlateBlue;
  scroll-snap-margin-block-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-block-start: DarkSlateBlue;
  -moz-scroll-snap-margin-block-start: DarkSlateBlue;
  -ms-scroll-snap-margin-block-start: DarkSlateBlue;
  scroll-snap-margin-block-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-block-start: DarkSlateBlue;
  -moz-scroll-snap-margin-block-start: DarkSlateBlue;
  -ms-scroll-snap-margin-block-start: DarkSlateBlue;
  scroll-snap-margin-block-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
